[gd_scene load_steps=4 format=2]

[ext_resource path="res://models/interactable/Interactable.gd" type="Script" id=1]
[ext_resource path="res://models/interactable/interactable_base.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 47.7807, 56.89 )

[node name="Interactable" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_Interactable_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Interactable_body_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
